--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ p {
     padding: 20px;
     clear: both;
     float: right;
-    width: 18%;
+    width: 21%;
     height: 115%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -153,15 +153,18 @@ p {
     color: #ffffff;
     line-height: 1.5;
     position: relative;
-    right: 40px;
+    right: 9px;
 }
 .benefits div {
 padding-bottom: 45px;
-
+}
+.benefits p {
+    font-size: 18px;
 }
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: 21px;
 }
 .benefits img {
     display: block;
