--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 body {
     background-color: #d9dcd6;
 }
-/* general styles end */
 /* universal styles end */
 
 /* header begin */
@@ -20,6 +19,10 @@ header {
     color: #ffffff;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -59,11 +62,6 @@ header div ul li {
 /* hero end */
 
 /* main body begin */
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
 p {
     font-size: 16px;
 }
@@ -84,7 +82,7 @@ p {
     margin-left: 20px;
 }
 
-.search-engine-optimization {
+.content div {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -93,47 +91,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.content img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -153,19 +115,23 @@ p {
     color: #ffffff;
     line-height: 1.5;
     position: relative;
-    right: 9px;
+    right: 7px;
 }
+
 .benefits div {
 padding-bottom: 45px;
 }
+
 .benefits p {
     font-size: 18px;
 }
+
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
     font-size: 21px;
 }
+
 .benefits img {
     display: block;
     margin: 10px auto;
@@ -180,6 +146,7 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
 footer h2 {
     font-size: 20px;
 }
